--- a/source/to_do_list/templates/index.html
+++ b/source/to_do_list/templates/index.html
@@ -1,15 +1,7 @@
+{% extends "base.html" %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
-</head>
-<body>
+
+{% block content %}
         <a href="tasks/add">Постановка новой задачи.</a>
         <h1>Задачи: </h1>
         {% for article in tasks %}
@@ -17,5 +9,4 @@
             <span>{{ article.status_t }}</span>
             <p><a href=/task/?pk={{ article.pk }}">Подробнее</a></p>
         {% endfor %}
-</body>
-</html>
+{% endblock %}
