"file switches configured"

--- a/source/to_do_list/templates/create.html
+++ b/source/to_do_list/templates/create.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
-{% load static %}
+{% block title %}Новая задача{% endblock %}
 
-{% block create %}
-    <h1>Добавление</h1>
-    <form action="/tasks/add/" method="post">
+{% block content %}
+    <form action="" method="post">
         {% csrf_token %}
         <label>Task:</label><br/>
         <textarea name="task"></textarea><br/>
+        <label>Description:</label><br/>
+        <textarea name="description"></textarea><br/>
         <label>date_of_completion:</label><br/>
-        <input type="text" name="date_of_completion"/><br/>
+        <input type="date" name="date_of_completion"/><br/>
         <br/>
         <input type="submit" value="Send"/>
     </form>
-    <p><a href="/">На главную</a></p>
+    <p><a href="{% url "index" %}">На главную</a></p>
 {% endblock %}
