--- a/source/to_do_list/templates/task_view.html
+++ b/source/to_do_list/templates/task_view.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
 {% load static %}
+{% block nav %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url "create_task" %}">Новая задача</a>
+    </li>
+{% endblock %}
 
-{% block preview %}
+
+{% block content %}
 <p>
     {{ task.task }}
 </p>
   <p>
       {{ task.status_t }}
   </p>
+    <p>
+    {{ task.description}}
+    </p>
 <p>
     {{ task.date_of_completion }}
 </p>
-<p><a href="/">На главную</a></p>
+<p><a href="{% url "index" %}">На главную</a></p>
 
 {% endblock %}
