"the implementation of the application for homework47"

--- a/source/to_do_list/templates/base.html
+++ b/source/to_do_list/templates/base.html
@@ -12,7 +12,8 @@
     <title>{% block main %}Главная{% endblock %}</title>
 </head>
 <body>
-<div class="container"><nav class="navbar navbar-dark bg-primary">
+<div class="container">
+    <nav class="navbar navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" \
@@ -24,11 +25,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url "index" %}">Home</a>
         </li>
-      </ul>
-        <ul class="navbar-nav">
+           <ul class="navbar-nav">
                 {% block nav %}
                 {% endblock %}
-            </ul>
+           </ul>
+      </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn" type="submit">Search</button>
